<resources>
    <string name="app_name">NasMon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="welcome">Selamat Datang</string>
    <string name="jabatan">Jabatan</string>
    <string name="textRegis">Belum Punya Akun? Klik Disini</string>
    <string name="base_url">http://192.168.1.14:8000/</string>
    <string name="api_server">http://192.168.39.195:8000/api</string>
    <string name="api_serverr">http://192.168.1.14:8000/api/</string>
    <string name="server">http://192.168.200.137:8000</string>
    <string name="Buatakun">Buat Akun</string>
    <string name="nama">Nama</string>
    <string name="konfirpass">Konfirmasi Password</string>
    <string name="forget">Lupa Password?</string>
    <string name="api_forget">http://192.168.200.137:8000/forgot-password</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="judul_account">Akun</string>
    <string name="judul_monitoring">Monitoring Nasabah</string>
    <string name="judul_surat">Surat Nasabah</string>
    <string name="judul_kunjungan">Kunjungan</string>
    <string name="key">Key</string>
    <string name="nothing">Tidak Diketahui</string>


    <string-array name="tingkat_sp_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="kategori_sp_array">
        <item>Peringatan</item>
        <item>Somasi</item>
        <item>Pendamping</item>
    </string-array>

</resources>