<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".fragment.LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_marginTop="200dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:padding="16dp"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:paddingStart="16dp"
            android:paddingBottom="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginEmail"
            android:hint="@string/email"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_border"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="18dp"
            android:paddingStart="16dp"
            android:paddingBottom="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:background="@drawable/edittext_border"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_forget"

            android:text="@string/forget"
            android:textColor="@color/gray"
            android:padding="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/login"

            android:textSize="18sp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/selector_button_login"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_regis"
            android:gravity="center"
            android:text="@string/textRegis"
            android:textColor="@color/gray"
            android:textStyle="italic"
            android:padding="16dp"/>
    </LinearLayout>




</LinearLayout>