<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_marginTop="60dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:paddingStart="16dp"
            android:paddingBottom="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerName"
            android:hint="@string/nama"
            android:padding="16dp"
            android:paddingBottom="8dp"
            android:inputType="text"
            android:textSize="15dp"
            android:background="@drawable/edittext_border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="18dp"
            android:paddingStart="16dp"
            android:paddingBottom="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerEmail"
            android:hint="@string/email"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:textSize="15dp"

            android:background="@drawable/edittext_border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="18dp"
            android:paddingStart="16dp"
            android:paddingBottom="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15dp"

            android:padding="16dp"
            android:background="@drawable/edittext_border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nip"
            android:layout_marginTop="18dp"
            android:paddingStart="16dp"

            android:paddingBottom="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerNip"
            android:hint="@string/nip"
            android:padding="16dp"
            android:inputType="number"
            android:textSize="15dp"

            android:background="@drawable/edittext_border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jabatan"
            android:layout_marginTop="18dp"
            android:paddingStart="16dp"
            android:paddingBottom="8dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/jabatanSpinnerRegis"
                android:padding="14dp" />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/register"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:background="@drawable/selector_button_login"/>
    </LinearLayout>
</LinearLayout>
